garnet/public/rust/zerocopy/zerocopy-derive/tests/ui/union.stderr
error: proc-macro derive panicked
  --> $DIR/union.rs:10:10
   |
10 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = help: message: synstructure does not handle untagged unions (https://github.com/mystor/synstructure/issues/6)

error: aborting due to previous error

